Organized into projects and moved code to classes

--- a/DiscordBot.App/DiscordBot.App.csproj
+++ b/DiscordBot.App/DiscordBot.App.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DiscordBot.Domain\DiscordBot.Domain.csproj" />
+    <ProjectReference Include="..\DiscordBot.Extensions\DiscordBot.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
